# gLIB

./: .gitignore  LICENSE  README.md
benchmark/: BM_aligned_memory.cpp  BM_if_else_vs_array.cpp  BM_memset_vs_gb_zeros.cpp  BM_ofstream_vs_fwrite.cpp  BM_snprintf_vs_strcpy.cpp  CMakeLists.txt  build.ps1  build.sh  clear.ps1  clear.sh
src/: GBuffer.cpp  GBuffer.hpp  GCircularBuffer.hpp  GConfig.cpp  GConfig.hpp  GFFT.hpp  GFifo.cpp  GFifo.hpp  GFilePipe.cpp  GFilePipe.hpp  GLogger.cpp  GLogger.hpp  GMeasure.hpp  GOptions.cpp  GOptions.hpp  GPingPong.cpp  GPingPong.hpp  GPtr.hpp  GThreadPriority.cpp  GThreadPriority.hpp  GUdpClient.cpp  GUdpClient.hpp  GUdpLink.cpp  GUdpLink.hpp  GUdpServer.cpp  GUdpServer.hpp  GUtils.cpp  GUtils.hpp  GXCorr.hpp  Gmseq.hpp  gCircularBuffer.hpp
test/: CMakeLists.txt  build.ps1  clear.ps1  test_GFilePipe.cpp  test_GMeasure.cpp  test_GPingPong.cpp
